KSENROLL-13206: Fixed My Cart spacing issues in large-format registration.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@71128 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/MainHeading.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/MainHeading.less
@@ -138,7 +138,7 @@
 
   .kscr-MainHeading-CartHeading .kscr-MainHeading {
     padding-bottom: 8px;
-    padding-top: 8px;
+    padding-top: 10px;
   }
 
   .kscr-Schedule-header {
