--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
@@ -351,7 +351,7 @@
 
 @media screen and (min-width: @largeFormatMin) {
   .kscr-Card {
-    margin: 3px 0 0;
+    margin: 4px 0 0;
     border: none;
   }
 
@@ -378,11 +378,11 @@
   }
 
   .kscr-Responsive-schedule .panel-group .panel {
-    margin: 0px 10px 10px 10px;
+    margin: 0px 10px 10px;
   }
 
   .kscr-Card-heading {
-    margin: 0px 10px 0px 10px;
+    margin: 0px 10px;
   }
 
   .kscr-Card-responseCount {
