--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/heading.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/heading.less
@@ -5,7 +5,7 @@
     font-size: 14px;
     color: @secondaryTextColor;
     font-weight: bold;
-    padding: 0.5em 0.7em 0 0.7em;
+    padding: 0 0.7em;
     text-transform: uppercase;
 }
 
